<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.views.HomeFragment">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/home_header_text"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:lineHeight="27sp"
            android:text="@string/promotional_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_home" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/slider_image_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="170dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shapeableImageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.compose.ui.platform.ComposeView
                    android:id="@+id/compose_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/promotionalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Be a part of our"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/communityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="community"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/promotionalTextView"
            app:layout_constraintStart_toStartOf="@+id/promotionalTextView"
            app:layout_constraintTop_toBottomOf="@+id/promotionalTextView" />

        <View
            android:id="@+id/orangeLinerView"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="@+id/communityTextView"
            app:layout_constraintStart_toStartOf="@+id/communityTextView"
            app:layout_constraintTop_toBottomOf="@+id/communityTextView" />

        <TextView
            android:id="@+id/promotionalTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotional_text_three"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/orangeLinerView"
            app:layout_constraintStart_toStartOf="@+id/orangeLinerView"
            app:layout_constraintTop_toBottomOf="@+id/orangeLinerView" />

        <TextView
            android:id="@+id/promotionalTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotional_text_four"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/promotionalTextView3"
            app:layout_constraintStart_toStartOf="@+id/promotionalTextView3"
            app:layout_constraintTop_toBottomOf="@+id/promotionalTextView3" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="32dp"
            android:elevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/promotionalTextView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join our growing community."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pay rent monthly?"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>